# messaging-daemon

./: SKILL.md  __main__.py  confirm.py  poll.py  pyproject.toml
backends/: base.py  email.py  signal.py
messaging_daemon/: __init__.py  db.py  http_api.py
messaging_daemon/backends/: __init__.py  email.py  signal.py
tests/: test_email_tls.py
