[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "messaging-daemon"
version = "0.1.0"
description = "Unified messaging daemon (Signal, Email, …)"
requires-python = ">=3.11"
dependencies = []   # stdlib only

[project.scripts]
messaging-daemon = "messaging_daemon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["messaging_daemon*"]
