[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "messaging-daemon"
version = "0.1.0"
description = "Unified messaging daemon (Signal, Email, ...)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
messaging-daemon = "messaging_daemon.__main__:main"

[tool.setuptools]
packages = [
  "messaging_daemon",
  "messaging_daemon.backends",
]
